--- a/scss/custom/_head.scss
+++ b/scss/custom/_head.scss
@@ -60,18 +60,18 @@ font-size:.5rem;
             color:white;
             font-size:1rem;
               }
-        .left {
-            position: absolute;
-            top: 6%;
-            left: 13%;
-            transform: translate(-50%, -50%);
-          }
-          .right {
-            position: absolute;
-            top: 6%;
-            left: 88%;
-            transform: translate(-50%, -50%);
-          }
+        // .left {
+        //     position: absolute;
+        //     top: 6%;
+        //     left: 13%;
+        //     transform: translate(-50%, -50%);
+        //   }
+        //   .flame-right {
+        //     position: absolute;
+        //     top: 6%;
+        //     left: 88%;
+        //     transform: translate(-50%, -50%);
+        //   }
     }
   }
 
