--- a/scss/custom/_variables.scss
+++ b/scss/custom/_variables.scss
@@ -1,2 +1,12 @@
 $bright-red:#F9311B;
 $red-lust:#C5301F;
+$red-glut:#B0291B;
+$red-greed:#92281B; 
+$red-wrath:#621B12;
+$red-heresy:#741C12;
+
+$red-violence:#4B110B;
+$red-fraud:#3C0D08;
+$red-traitory:#2B0905;
+$red-devil:#110302;
+
