--- a/scss/custom/_body.scss
+++ b/scss/custom/_body.scss
@@ -1,15 +1,113 @@
 body{
     font-size: 12px;
+    
+}
+a{
+  text-decoration: none;
+  color:black;
+}
+.background-wrath{
+  background-color: $bright-red;
+}
+a:hover{
+  color:red;
+}
+a h2:hover{
+  color:red;
+}
+span{
+  font-size:3rem;
+  text-align: center;
+}
+.welcome-bg{
+    /*background-image:url('../images/background-texture.png');
+    width: 100%;*/
+    background-image: url('../images/background.jpg');
+    background-size: cover; 
+    overflow: hidden;
+}
+
+.btn-card {
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+}
+
+.btn-card img {
+  width: 100%;
+  height: auto;
+}
+
+.btn-card h2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black; /* Set the color to be visible on the image */
+  margin: 0;
+}
+.limbo{
+  
+    background-image:url('../images/limbo.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height:40vh;
+  
+  
 }
 
 
-.welcome-bg{
-    background-image:url('../images/background-texture.png')
+.red-lust{
+  background-color:$red-lust;
+}
+.lusth{font-size:5rem;}
+
+.lust p{
+  text-align: center;
+}
+.lust{
+  background-image:url('../images/girls.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
+ 
+
+}
+
+.red-glut{
+  background-color:$red-glut;
+}
+.red-greed{
+  background-color:$red-greed;
+}
+.red-wrath{
+  background-color:$red-wrath;
+}
+.red-heresy{
+  background-color:$red-heresy;
+}
+.red-violence{
+  background-color:$red-violence;
+}
+.red-fraud{
+  background-color:$red-fraud;
+}
+.red-traitory{
+  background-color:$red-traitory;
+}
+.red-devil{
+  background-color:$red-devil;
 }
 .under-welcome{
     background-color: $bright-red;
     margin-top:-3px;
-    height:85px;
+    height:170px;
+}
+
+.gluttony span{
+  font-size: 1.25rem;
+}
+.gluttony {
+  font-size:2rem;
 }
 h1{
     font-family: "kon-tiki-aloha-jf", sans-serif;
@@ -20,7 +118,9 @@ h2{    font-family: "kon-tiki-aloha-jf", sans-serif;
     font-size:1.25rem;
     font-weight: 400;
     font-style: normal;}
-
+.small-h{
+    font-size:.5rem;
+}
  .white-button{position:absolute;}     
 .text-image-hold {
     position: relative;
@@ -37,10 +137,8 @@ h2{    font-family: "kon-tiki-aloha-jf", sans-serif;
 font-weight: 400;
 font-style: normal;
 color:black;
+font-size:1.5rem;
   }
-.align{
-    margin-bottom:-1rem;
-}
   .items {
     overflow: auto;
     display: flex;
@@ -86,13 +184,18 @@ color:black;
     }
     .item.group-b {
         order: 10;
+        
+    }
+    .lusth{font-size:2rem;}
+    .girls{
+      margin-top:127px;
     }
   }
   @media only screen and (min-width: 400px) {
     .under-welcome{
         background-color: $bright-red;
         margin-top:-3px;
-        height:90px;
+   
     }
     .text-image-hold {
         position: relative;
@@ -101,13 +204,17 @@ color:black;
         margin-top:33px;
         
       }
+      .lusth{font-size:2rem;}
+      .girls{
+        margin-top:127px;
+      }
    }
 
 @media only screen and (min-width: 430px) {
     .under-welcome{
         background-color: $bright-red;
         margin-top:-3px;
-        height:90px;
+      
     }
     .text-image-hold {
         position: relative;
@@ -116,12 +223,16 @@ color:black;
         margin-top:35px;
         
       }
+      .lusth{font-size:2rem;}
+      .girls{
+        margin-top:52px;
+      }
    }
    @media only screen and (min-width: 540px) {
     .under-welcome{
         background-color: $bright-red;
         margin-top:-3px;
-        height:118px;
+       
     }
     .text-image-hold {
         position: relative;
@@ -130,16 +241,20 @@ color:black;
         margin-top:40px;
         
       }
+      .lusth{font-size:2.5rem;}
       h2{    font-family: "kon-tiki-aloha-jf", sans-serif;
         font-size:1.5rem;
         font-weight: 400;
-        font-style: normal;}
+        font-style: normal;
+        .small-h{
+            font-size:.5rem;
+        }}
    }
    @media only screen and (min-width: 625px) {
     .under-welcome{
         background-color: $bright-red;
         margin-top:-3px;
-        height:118px;
+    
     }
     .text-image-hold {
         position: relative;
@@ -151,13 +266,29 @@ color:black;
       h2{    font-family: "kon-tiki-aloha-jf", sans-serif;
         font-size:1.5rem;
         font-weight: 400;
-        font-style: normal;}
+        font-style: normal;
+        .small-h{
+            font-size:.5rem;
+        }}
+
+        .limbo{
+  
+          background-image:url('../images/limbo.png');
+          background-size: 100%;
+          background-repeat: no-repeat;
+          height:45vh;
+        
+        
+      }
+      .glutpent{
+        margin-top:-7px;
+      }
    }
    @media only screen and (min-width: 700px) {
     .under-welcome{
         background-color: $bright-red;
         margin-top:-3px;
-        height:118px;
+     
     }
     .text-image-hold {
         position: relative;
@@ -166,17 +297,33 @@ color:black;
         margin-top:50px;
         
       }
+
+      .limbo{
+  
+        background-image:url('../images/limbo.png');
+        background-size: 100%;
+        background-repeat: no-repeat;
+        height:45vh;
+      
+      
+    }
       h2{    font-family: "kon-tiki-aloha-jf", sans-serif;
         font-size:1.5rem;
         font-weight: 400;
-        font-style: normal;}
+        font-style: normal;
+        .small-h{
+            font-size:.5rem;
+        }}
+        .glutpent{
+          margin-top:-7px;
+        }
    }
    
    @media only screen and (min-width: 768px) {
     .under-welcome{
         background-color: $bright-red;
         margin-top:-3px;
-        height:118px;
+      
     }
     .text-image-hold {
         position: relative;
@@ -188,13 +335,28 @@ color:black;
       h2{    font-family: "kon-tiki-aloha-jf", sans-serif;
         font-size:1.5rem;
         font-weight: 400;
-        font-style: normal;}
+        font-style: normal;
+        .small-h{
+            font-size:.5rem;
+        }}
+        .limbo{
+  
+          background-image:url('../images/limbo.png');
+          background-size: 100%;
+          background-repeat: no-repeat;
+          height:50vh;
+        
+        
+      }
+      .glutpent{
+        margin-top:-7px;
+      }
    }
    @media only screen and (min-width:900px) {
     .under-welcome{
         background-color: $bright-red;
         margin-top:-3px;
-        height:148px;
+        
     }
     .text-image-hold {
         position: relative;
@@ -206,13 +368,20 @@ color:black;
       h2{    font-family: "kon-tiki-aloha-jf", sans-serif;
         font-size:2rem;
         font-weight: 400;
-        font-style: normal;}
+        font-style: normal;
+        .small-h{
+            font-size:.5rem;
+        }}
+        .lusth{font-size:4rem;}
+        .glutpent{
+          margin-top:25px;
+        }
    }
    @media only screen and (min-width:1000px) {
     .under-welcome{
         background-color: $bright-red;
         margin-top:-3px;
-        height:152px;
+      
     }
     .text-image-hold {
         position: relative;
@@ -221,16 +390,32 @@ color:black;
         margin-top:55px;
         
       }
+      .glutpent{
+        margin-top:25px;
+      }
+
+      .limbo{
+  
+        background-image:url('../images/limbo.png');
+        background-size: 100%;
+        background-repeat: no-repeat;
+        height:65vh;
+      
+      
+    }
       h2{    font-family: "kon-tiki-aloha-jf", sans-serif;
         font-size:2rem;
         font-weight: 400;
-        font-style: normal;}
+        font-style: normal;
+        .small-h{
+            font-size:.5rem;
+        }}
    }
    @media only screen and (min-width:1100px) {
     .under-welcome{
         background-color: $bright-red;
         margin-top:-3px;
-        height:157px;
+    
     }
     .text-image-hold {
         position: relative;
@@ -248,7 +433,7 @@ color:black;
     .under-welcome{
         background-color: $bright-red;
         margin-top:-3px;
-        height:180px;
+     
     }
     .text-image-hold {
         position: relative;
@@ -261,4 +446,8 @@ color:black;
         font-size:2rem;
         font-weight: 400;
         font-style: normal;}
+        .glutpent{
+          margin-top:9px;
+        }
    }
+
